testsuite/good/decorators/test_decorator_polymorphic_2/C.flux
decorable type C extends B {
   void methodC();
}
methods {
   void methodA() {
      System.out.println("C.methodA");
   }
   void methodB() {
      System.out.println("C.methodB");
   }
   void methodC() {
      System.out.println("C.methodC");
   }
}